--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "index.js",
   "scripts": {
     "migrate": "npx sequelize-cli db:migrate",
-    "start": "npm run migrate && node ./src/app.js",
+    "init": "node ./src/app.js",
+    "start": "npm run migrate && npm run init",
     "dev": "nodemon ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Marco FullStack Díaz",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
